Fix table components to respond into cards on smaller screens and fix columns in project-fiscals

--- a/client/wfprev-war/src/main/angular/src/app/components/edit-project/activities/activities.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/edit-project/activities/activities.component.scss
@@ -126,6 +126,7 @@
 
     .first-section{
         display: flex;
+        flex-wrap: wrap;
         gap:20px;
         width: 100%;
         padding-top: 16px;
